name:                mq-component-hs
version:             0.1.0.0
synopsis:            Package with monique component
description:
  The package covers:
  .
    * component base functions
homepage:            https://github.com/biocad/mq-component-hs
license:             BSD3
license-file:        LICENSE
author:              Bogdan Neterebskii, Vladimir Morozov, Sofya Kochkova, Alexander Sadovnikov
maintainer:          neterebskiy@biocad.ru
copyright:           (c) 2018, BIOCAD
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
  other-modules:       
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -O2
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/biocad/mq-component-hs
