name:                mq-component-hs
version:             0.1.2.1
synopsis:            Package with monique component
description:
  The package covers:
  .
    * component basic functions
homepage:            https://github.com/biocad/mq-component-hs
license:             BSD3
license-file:        LICENSE
author:              Bogdan Neterebskii, Vladimir Morozov, Alexander Sadovnikov
maintainer:          neterebskiy@biocad.ru
copyright:           (c) 2018, BIOCAD
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.MQ.Component
                     , System.MQ.Component.Extras
  other-modules:       System.MQ.Component.Internal.Atomic.Types
                     , System.MQ.Component.Internal.Atomic.Functions
                     
                     , System.MQ.Component.Internal.Atomic
                     , System.MQ.Component.Internal.Env
                     , System.MQ.Component.Internal.Config
                     , System.MQ.Component.Internal.App
                     , System.MQ.Component.Internal.Transport
       
                     , System.MQ.Component.Internal.Technical.Kill
                     , System.MQ.Component.Internal.Technical.Monitoring
                     
                     , System.MQ.Component.Extras.Template.Listener
                     , System.MQ.Component.Extras.Template.Types
                     , System.MQ.Component.Extras.Template.Worker
                     
                     , System.MQ.Component.Extras.Error
                     , System.MQ.Component.Extras.Foreign
                     , System.MQ.Component.Extras.Template
                     
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-casing
                     , aeson-picker
                     , bcd-config
                     , bytestring
                     , data-msgpack
                     , data-msgpack-types
                     , lens
                     , hslogger
                     , mq
                     , mtl
                     , semigroups
                     , text
                     , unix-time
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  
executable example-radio-speaker
  hs-source-dirs:      app
  main-is:             ExampleRadioSpeaker.hs
  other-modules:       ExampleRadioTypes
  build-depends:       base
                     , aeson
                     , mq
                     , mq-component-hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2

executable example-radio-listener
  hs-source-dirs:      app
  main-is:             ExampleRadioListener.hs
  other-modules:       ExampleRadioTypes
  build-depends:       base
                     , aeson
                     , mq
                     , mq-component-hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  
executable example-calculator
  hs-source-dirs:      app
  main-is:             ExampleCalculator.hs
  other-modules:       ExampleCalculatorTypes
  build-depends:       base
                     , aeson
                     , mq
                     , mq-component-hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  
executable example-bank
  hs-source-dirs:      app
  main-is:             ExampleBank.hs
  other-modules:       ExampleBankTypes
                     , ExampleCalculatorTypes
  build-depends:       base
                     , aeson
                     , aeson-casing
                     , mq
                     , mq-component-hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2

executable example-clock-ask
  hs-source-dirs:      app
  main-is:             ExampleClockAsk.hs
  other-modules:       ExampleClockTypes
  build-depends:       base
                     , aeson
                     , mq
                     , mq-component-hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2

executable example-clock-reply
  hs-source-dirs:      app
  main-is:             ExampleClockReply.hs
  other-modules:       ExampleClockTypes
  build-depends:       base
                     , aeson
                     , mq
                     , mq-component-hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2

source-repository head
  type:     git
  location: https://github.com/biocad/mq-component-hs
